--- a/src/components/StoreFinder.css
+++ b/src/components/StoreFinder.css
@@ -51,3 +51,13 @@
 .container{
   padding:5px;
 }
+.customButtons{
+  color:#00893f;
+  border:1px solid #00893f;
+  border-radius: 10%;
+}
+.scroll{
+height:200px;
+overflow-y: scroll;
+}
+
